--- a/DesignerRHN/DesignerRHN-war/web/EmplMvrs.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/EmplMvrs.xhtml
@@ -15,7 +15,6 @@
                     <f:loadBundle basename="Recursos.emplmvrs" var="msg" />
                     <p:growl id="growl" showDetail="true"/>
                     <p:panel  id="PanelTotal" header="#{msg['titulo']}" styleClass="panelTotal">    
-                        <h:outputText style="position: absolute; top: 50px; height: 12px;position: absolute;color: #BF1A1A; font-weight: bold;text-align: right;width: 240px;left: 600px;" id="nombreEmpleado" value="#{controlEmplMvr.empleado.persona.nombreCompleto}"/> 
 
                         <p:toolbar styleClass="cssToolbar" style=" position: absolute; top: 37px; left: 12px; height: 24px">  
                             <p:toolbarGroup align="left"> 
@@ -75,8 +74,19 @@
 
                             </p:toolbarGroup>  
                         </p:toolbar> 
+                        
+                        <fieldset style="position: absolute; top: 73px; left: 10px; height: 18px; width: 833px; border-radius: 3px; text-align: left; border: solid #C7BFBF 1px">
+                            
+                            <h:outputText value="#{msg['empleado']} " style="font-weight: bold; color: #14388B; position: relative; top: 5px; left: 0px" />
+                            <h:outputText id="nombreEmpleadot" value="#{controlEmplMvr.empleado.persona.nombreCompleto}" 
+                                          style="font-weight: bold; color: #BF1A1A; position: relative; left: 10px; top: 5px"/>
 
-                        <fieldset style="position: absolute;top: 73px;left: 10px;height: 183px;width: 830px; border-radius: 10px; text-align: left">
+                            <h:outputText value="#{msg['codigo']}" style="font-weight: bold; color: #14388B; position: relative; left: 120px; top: 5px" />
+                            <h:outputText id="docEmpleado" value="#{controlEmplMvr.empleado.codigoempleado}" 
+                                          style="font-weight: bold; color: #BF1A1A; position: relative; left: 130px; top: 5px" />
+                        </fieldset>
+
+                        <fieldset style="position: absolute;top: 105px;left: 10px;height: 180px;width: 830px; border-radius: 10px; text-align: left">
                             <legend style=" color: blue"><strong>#{msg['menorvalor']}</strong></legend>
                             <!-- TABLA EMPLVIGENCIALOCALIZACION -->
 
@@ -166,7 +176,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 10px; border-radius: 0px;" action="motivomvr" id="fooMotivo" actionListener="#{controlMotivosMvrs.recibirPaginaAnterior('atrasmotivomvr')}"  value=""/>
+                                        <p:commandButton style="width: 220px; height: inherit; border-radius: 0px; margin-left: -10px; margin-right: -10px " action="motivomvr" id="fooMotivo" actionListener="#{controlMotivosMvrs.recibirPaginaAnterior('atrasmotivomvr')}"  value=""/>
                                     </f:facet>
                                 </p:column>
 
@@ -194,7 +204,7 @@
                             <h:outputText id="informacionRegistroMVR" value="#{msg['infoRegistro']} #{controlEmplMvr.infoRegistroMVR}" style="position: relative; left: 15px; top: 1px; font-weight: bold"/>
                         </fieldset>
 
-                        <fieldset style="position: absolute;top: 273px;left: 10px;height: 182px;width: 830px; border-radius: 10px; text-align: left">
+                        <fieldset style="position: absolute;top: 300px;left: 10px;height: 180px;width: 830px; border-radius: 10px; text-align: left">
                             <legend style=" color: blue"><strong>#{msg['otros']}</strong></legend>
                             <p:dataTable id="datosOCEmpleado" var="info" rowKey="#{info.secuencia}" rowIndexVar="indiceOC" value="#{controlEmplMvr.listOCertificados}" 
                                          filteredValue="#{controlEmplMvr.filtrarListOtrosCertificados}" editable="true" editMode="cell" 
@@ -304,7 +314,7 @@
                                         </f:facet>  
                                     </p:cellEditor>
                                     <f:facet name="footer">
-                                        <p:commandButton style="width: 100%; height: 10px; border-radius: 0px;" action="tipocertificado" actionListener="#{controlTiposCertificados.recibirPagina('atrastipocertificado')}" id="fooCertificadosOC" value=""/>
+                                        <p:commandButton style="width: 110%; height: inherit; border-radius: 0px; margin-left: -10px; margin-right: -10px " action="tipocertificado" actionListener="#{controlTiposCertificados.recibirPagina('atrastipocertificado')}" id="fooCertificadosOC" value=""/>
                                     </f:facet>
                                 </p:column>
 
@@ -331,6 +341,10 @@
                             <!--<p:remoteCommand name="posicionOtro" actionListener="#/{controlEmplMvr.posicionOtro()}"/>-->
                         </fieldset>
 
+                        <p:commandButton style="position: absolute; left: 680px; top: 500px; height: 30px; width: 90px; background-image:  url(Imagenes/Iconos/aceptar.png); 
+                                         background-size: 100% 100%; background-repeat: no-repeat; border: none; " id="ACEPTAR" value="" onclick="confirmarGuardar.show();" process="@this"  disabled="#{controlEmplMvr.guardado}" />
+                        <p:commandButton style="position: absolute; left: 770px; top: 500px; height: 30px; width: 90px; background-image:  url(Imagenes/Iconos/cancelar.png); 
+                                         background-size: 100% 100%; background-repeat: no-repeat; border: none; " id="ATRAS" value="" actionListener="#{controlEmplMvr.salir()}" action="nomina" process="@this" />
 
                         <!-- DIALOGO L.O.V ESTATICO MOTIVO CAMBIO SUELDO     -->
                         <p:dialog header="#{msg['mvrM']}" widgetVar="MotivoDialogo" draggable="false" resizable="false" closable="false" id="MotivoDialogo"  
@@ -404,10 +418,6 @@
 
                         </p:dialog>
 
-                        <p:commandButton style="position: absolute; left: 680px; top: 478px; height: 30px; width: 90px; background-image:  url(Imagenes/Iconos/aceptar.png); 
-                                         background-size: 100% 100%; background-repeat: no-repeat; border: none; " id="ACEPTAR" value="" onclick="confirmarGuardar.show();" process="@this"  disabled="#{controlEmplMvr.guardado}" />
-                        <p:commandButton style="position: absolute; left: 770px; top: 478px; height: 30px; width: 90px; background-image:  url(Imagenes/Iconos/cancelar.png); 
-                                         background-size: 100% 100%; background-repeat: no-repeat; border: none; " id="ATRAS" value="" actionListener="#{controlEmplMvr.salir()}" action="nomina" process="@this" />
 
                     </p:panel>
 
